@@ -1,3 +1,13 @@
+2011-01-14  Petasis George  <petasis@iit.demokritos.gr>
+        * /library/tkdnd_macosx.tcl: Fixed a bug reported by Kevin Walzer:
+        macdnd::_GetDroppedData and xdnd::_GetDroppedData were missing the
+        "time" argument, added in the XDND section for TIP 370 (if it gets
+        accepted).
+
+        * /macosx/macdnd.m: Restored back a workarround by Kevin Walzer, as
+        TkDND does not work well under all circumstances in OS X 10.6.
+        (Reported by Kevin Walzer on 23 Dec 2010).
+
 2010-08-03  Petasis George  <petasis@iit.demokritos.gr>
         TkDND 2.2 released.
         * library/tkdnd_windows.tcl:
